--- a/style.css
+++ b/style.css
@@ -34,10 +34,10 @@ h1{
     font-size: 70px;
 }
 .hgeuih{
-    width: 1250px;
+    width: 100%;
 }
 img{
-    width: 1250px;
+    width: 100%;
     
 }
 p{
